Reintroduce setenv.sh for tomcat.